# bin-base

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.otlp-export  README.md
.cargo/: audit.toml
.claude/hooks/: pre-push.sh
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
examples/: ajj.rs  build-helper.rs  oauth.rs  otlp-export.rs  tx_cache.rs
from-env-derive/: Cargo.toml
from-env-derive/src/: field.rs  lib.rs
from-env-derive/tests/: macro.rs
from-env-macro/: Cargo.toml
from-env-macro/src/: field.rs  lib.rs
src/: lib.rs
src/perms/: builders.rs  calc.rs  config.rs  middleware.rs  mod.rs  oauth.rs  pylon.rs  tx_cache.rs
src/utils/: block_watcher.rs  calc.rs  constants_from_env.rs  flashbots.rs  from_env.rs  metrics.rs  oauth.rs  otel_axum.rs  otlp.rs  provider.rs  signer.rs  tracing.rs
tests/: flashbots.rs  macro.rs  tx-cache.rs
